# Image-Processing

./: .gitignore  CMakeLists.txt  Doxyfile.in  Doxygen  README.md  andre.cpp  main.cpp  parameters.hpp  parameters.json  setup.sh
googletest/: CMakeLists.txt
src/: ContourExtractor.cpp  ContourExtractor.hpp  Denoiser.cpp  Denoiser.hpp  FourierImage.cpp  FourierImage.hpp  Histogram.cpp  Histogram.hpp  Image.cpp  Image.hpp  Operations.cpp  Operations.hpp  main.cc  operations.cpp  operations.hpp  pcsc.cc  pcsc.hh
test/: contourExtractorTests.cpp  convolutionsTests.cpp  denoiserTests.cpp  fourierImageTests.cpp  gradientTests.cpp  histogramTests.cpp  imageTests.cpp  test.cc
